CloudFormation/ec2Servers/demoservers.yml
Description: > 
  Jldroid25 / VizGenDevops 2021

Parameters: 
  EnvironmentName:
    Description: This for An environment name that will be prefixed to resources
    Type: String 

Resources:
  # --- Our EC2 Server with with its SG & other needed features .
   
  # --- Security  Groups Section  -----#

  # Security group for our Load Balancer
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Allow http to our load balancer  
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName  

      # Ingress Security group for our LB Inbound traffic restriction/flow
      SecurityGroupIngress:
        - IpProtocol: tcp 
          FromPort: 80 
          ToPort: 80 
          CirdIP: 0.0.0.0/0
        
      # Egress Security group for our outbound traffic restriction/flow
      SecurityGroupEgress:
        - IpProtocol: tcp 
          FromPort: 80
          ToPort: 80
          CidrIP: 0.0.0.0/0
        
  # Web Servers Security Group to manage traffic 
  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local only
      VpcId: 
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName  

      # Ingress Security group for our webapp Inbound traffic restriction/flow
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

     #  Egress Security group for our webapp outbound traffic restriction/flow
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
  
  # --- auto Scaling  Group -----#
  
  WebAppLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:

        # optional automatic cmd to run when EC2 is instantiating
      UserData:
        Fn::Base64: !Sub | 
          #!/bin/bash
          sudo apt-get update -y 
          sudo apt-get install apache2 -y
          sudo systemctl start apache2.service 

      ImageId:  ami-00ddb0e5626798373
      # ----- optional for an SSH key when testing only/no Production
      #KeyName: myPrivKey
      securityGroups:
      - Ref: WebServerSecGroup
      InstanceType: t3.medium
      BlockDeviceMappings:
      - DeviceName: "/dev/sdk"
        Ebs:
          VolumeSize: '10'

  WebAppGroup:
    Type: AWS::AutoScaling::AutoScalingGroup 
    Properties:
      VPCZoneIdentifier: 
      - Fn::ImportValue: 
          !Sub "${EnvironmentName}-PRIV-NETS"
      LaunchConfigurationName:
        Ref: WebAppLaunchConfig
      MinSize: '3'
      MaxSize: '5'
      TargetGroupARNs:
      - Ref: WebAppTargetGroup 
  # 
  WebAppLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer 
    Properties: 
      Subnets:
      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
      SecurityGroups:
      - Ref: LBSecGroup 

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener 
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: 
          Ref: WebAppTargetGroup
      LoadBalancerArn:
        Ref: WebAppLB 
      Port: '80'
      Protocol: HTTP 

  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'WebAppTargetGroup' 
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'Listener'
      Priority: 1

  WebAppTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup 
    Properties: 
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: / 
      HealthCheckProtocol: HTTP 
      HealthCheckTimeoutSeconds: 8
      HealthyThresholdCount: 2 
      Port: 8080
      Protocol: HTTP 
      UnHealthyThresholdCount: 5 
      VpcId:
        Fn::ImportValue:
          Fn::Sub: "${EnvironmentName}-VPCID"
